express-reliability-platform-capstone/governance/gatekeeper/templates/require-ns-labels.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: requirenslabels
spec:
  crd:
    spec:
      names:
        kind: RequireNsLabels
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package requirenslabels

        violation[{"msg": msg}] {
          not input.review.object.metadata.labels.owner
          msg := "Namespace is missing required label: owner"
        }

        violation[{"msg": msg}] {
          not input.review.object.metadata.labels.environment
          msg := "Namespace is missing required label: environment"
        }
